--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^3.3.7",
     "history": "^4.6.3",
     "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
