--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
-//{
-//  "extends": "airbnb",
-//  "env": {
-//    "browser": true
-//  }
-//}
+{
+  "extends": "airbnb",
+  "env": {
+    "browser": true
+  }
+}
