--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
+    "react-notifications": "^1.4.3",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.11",
+    "react-test-renderer": "^15.6.1",
     "webpack": "^3.5.5"
   },
   "scripts": {
