--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "bootstrap": "^3.3.7",
+    "coveralls": "^3.0.0",
     "enzyme": "^2.9.1",
     "history": "^4.6.3",
     "jquery": "^3.2.1",
